kubernetes/overlays/production/boldog-web/deployment_resources.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boldog-web
  namespace: boldog
spec:
  template:
    spec:
      containers:
        - name: boldog-web
          resources:
            requests:
              memory: 100Mi
              cpu: 500m
            limits:
              memory: 200Mi
              cpu: 1000m
