kubernetes/overlays/production/boldog-web/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: boldog-web
spec:
  rules:
    - host: jazeroboldog.sk
      http:
        paths:
          - backend:
              serviceName: boldog-web
              servicePort: web
            path: /
